#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([caffe-local], [0.1.1], [xjl-bug@99jsj.com])
AM_INIT_AUTOMAKE([-Wno-portability])

# Checks for programs.
AC_PROG_LN_S

AC_CHECK_FUNCS([memset])
AC_CHECK_FUNCS([pow])
AC_CHECK_FUNCS([sqrt])
AC_CHECK_HEADERS([stdint.h])
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_FUNC_MALLOC
AC_PROG_CC
AC_PROG_CXX
AC_TYPE_INT8_T
AC_TYPE_SIZE_T

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

