#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([cdu-bodz-deb], [1.0.0], [xjl-bug@99jsj.com])
AM_INIT_AUTOMAKE([-Wno-portability])

# Checks for programs.
AC_PROG_LN_S

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
